--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.0.1",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "clsx": "^1.0.4",
+    "express": "^4.17.1",
+    "lowdb": "^1.0.0",
+    "puppeteer": "^1.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-virtualized": "^9.21.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
